Add support to manuals on products

--- a/src/i18n/locales/__cached__.json
+++ b/src/i18n/locales/__cached__.json
@@ -32,7 +32,8 @@
   },
   "products": {
     "title": "Nossos produtos",
-    "applications": "Aplicações"
+    "applications": "Aplicações",
+    "manuals": "Manuais"
   },
   "contact": {
     "talkToUs": "Fale conosco"
