--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,7 +32,8 @@
   },
   "products": {
     "title": "Our products",
-    "applications": "applications"
+    "applications": "applications",
+    "manuals": "manuals"
   },
   "contact": {
     "talkToUs": "Contact us"
