--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -32,7 +32,8 @@
   },
   "products": {
     "title": "Nuestros productos",
-    "applications": "Aplicaciones"
+    "applications": "Aplicaciones",
+    "manuals": "Manuales"
   },
   "contact": {
     "talkToUs": "Hable con nosotros"
