--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -32,7 +32,8 @@
   },
   "products": {
     "title": "Nossos produtos",
-    "applications": "Aplicações"
+    "applications": "Aplicações",
+    "manuals": "Manuais"
   },
   "contact": {
     "talkToUs": "Fale conosco"
