Update Post “2024-05-26-teste-2”

--- a/src/content/blog/2024-05-26-teste-2.md
+++ b/src/content/blog/2024-05-26-teste-2.md
@@ -23,7 +23,8 @@ body_es: Duis dictum porttitor massa, ac tincidunt augue vehicula non. Donec in
   iaculis ut. Suspendisse sit amet nunc augue. Donec id imperdiet nulla, sit
   amet faucibus erat. Nulla auctor purus ut mauris fringilla volutpat. Cras
   consectetur laoreet enim id scelerisque.
-images: null
+images:
+  - ../../assets/images/1707390243947.jpg
 date: 2024-05-26T16:43
 ---
 No mundo industrial, a eficiência e a segurança são pilares fundamentais para o sucesso de qualquer operação. As portas rápidas, também conhecidas como portas de enrolar rápidas, têm se destacado como uma solução tecnológica que atende a essas demandas. Elas são projetadas para abrir e fechar rapidamente, facilitando o tráfego constante e reduzindo a perda de energia em ambientes industriais. Neste artigo, exploraremos em detalhes o funcionamento, as funcionalidades e os benefícios das portas rápidas, destacando como elas podem otimizar processos e aumentar a produtividade.
