Update Post “2024-05-26-teste-2”

--- a/src/content/blog/2024-05-26-teste-2.md
+++ b/src/content/blog/2024-05-26-teste-2.md
@@ -1,5 +1,5 @@
 ---
-title: "Portas Rápidas: saiba como funcionam e todas as funcionalidades. "
+title: "Portas Rápidas: saiba como funcionam e todos os benefícios "
 title_en: Test 2
 title_es: Testê 2
 body_en: Etiam nibh risus, eleifend ac arcu et, placerat convallis sapien. Morbi
