--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -43,7 +43,8 @@
   "products": {
     "title": "Nossos produtos",
     "applications": "Aplicações",
-    "manuals": "Manuais"
+    "manuals": "Manuais",
+    "contact": "Entre em contato e saiba mais sobre o produto"
   },
   "contact": {
     "talkToUs": "Fale conosco"
